@@ -1,3 +1,7 @@
+2005-07-09  Kouhei Yanagita <sugi@dream.big.or.jp>
+	* style/default/html_formatter.rb: fixed: a block plugin preceding
+	a heading level 1 (!) makes markup wrong.
+
 2005-07-08  Kouhei Yanagita <sugi@dream.big.or.jp>
 	* hiki/config.rb (load_messages): change name from guess_lang.
 	use all values in HTTP_ACCEPT_LANGUAGE. use 'en' as @lang when
